--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Nietzsche Quotes</title>
+  <title>Nietzsche Quotes by Nyando</title>
 </head>
 <body style="margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #121212; color: #f5f5f5; padding: 2rem;">
 
-  <h1 style="text-align: center; color: #26c7ed; font-size: 2.5rem; margin-bottom: 2rem;">
+  <h1 style="text-align: center; color: #26c7ed; font-size: 2.5rem; margin-bottom: 1rem;">
     🌌 Friedrich Nietzsche Quotes
   </h1>
+
+  <p style="text-align: center; color: #aaa; margin-top: -0.5rem; margin-bottom: 2rem;">by Nyando</p>
+
+  <div style="text-align: center; margin-bottom: 2rem;">
+    <img 
+      src="https://github.com/anomalous254/poc/blob/main/photo_1.png?raw=true" 
+      alt="Nietzsche inspired art"
+      style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.4); border: 2px solid #26c7ed;"
+    />
+  </div>
 
   <div style="max-width: 700px; margin: auto;">
     <div style="background: #1e1e1e; border-left: 4px solid #26c7ed; padding: 1rem 1.5rem; margin-bottom: 1.2rem; border-radius: 10px;">
